:notes: lyrics: Initial commit
Convert the old lyrics page from the v3 site into a fancy new Jekyll-
driven way of serving the site. Includes fancy SEO improvements that
might make this page more discoverable. Maybe?

Either way, a little nostalgia peppered in on my website.

Signed-off-by: Justin W. Flory <git@jwf.io>

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,9 @@
 
 {% include layout/nav.html %}
 
+{% unless page.title %}
 {% include layout/header.html %}
+{% endunless %}
 
     <main class="page-content" aria-label="Content">
         <div class="wrapper">
