--- a/css/style.css
+++ b/css/style.css
@@ -89,8 +89,15 @@ nav li a:hover {
 
 /* ===[ Main body styling ]=== */
 
-main .section {
+/* Add whitespace around content */
+main .section, main article {
   padding: 2% 15%;
+}
+
+/* Center iframes on page */
+main article iframe {
+  display: block;
+  margin: 0 auto;
 }
 
 main .section img {
